app/hello/deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-v1
  namespace: demo
  labels:
    app: hello
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
      version: v1
  template:
    metadata:
      labels:
        app: hello
        version: v1
    spec:
      containers:
        - name: hello
          image: hashicorp/http-echo:1.0.0
          args:
            - "-text=hello-v1"
          ports:
            - name: http
              containerPort: 5678
