app/hello/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: demo
  labels:
    app: hello
spec:
  selector:
    app: hello
  ports:
    - name: http
      port: 8080
      targetPort: http
